// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Button] Component Rendering should render disabled without crashing 1`] = `
<div
  className="sc-bdVaJa dkdaLU"
  disabled={true}
  onClick={[Function]}
>
  Button
</div>
`;

exports[`[Button] Component Rendering should render without crashing 1`] = `
<div
  className="sc-bdVaJa ecSMga"
  disabled={false}
  onClick={[Function]}
>
  Default
</div>
`;
